crates/qwik-optimizer-oxc/tests/snapshots/example_invalid_segment_expr1.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useStyles$ } from "@qwik.dev/core";
import css1 from "./global.css";
import css2 from "./style.css";

export const App = component$(() => {
  const style = `${css1}${css2}`;
  useStyles$(style);
  const render = () => {
    return <div></div>;
  };
  return $(render);
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import css1 from "./global.css";
import css2 from "./style.css";
import { qrl } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_useStyles_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_1_XXXXXXXXXXXX");
export const App_component_XXXXXXXXXXXX = () => {
  useStylesQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_useStyles_XXXXXXXXXXXX"));
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_1_XXXXXXXXXXXX");
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_App_component_useStyles_XXXXXXXXXXXX.js === (ENTRY)
export const App_component_useStyles_XXXXXXXXXXXX = style;

/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_useStyles",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_useStyles_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false
}
*/

=== test.tsx_App_component_1_XXXXXXXXXXXX.js === (ENTRY)
export const App_component_1_XXXXXXXXXXXX = render;

/*
{
  "origin": "test.tsx",
  "name": "App_component_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[
  {
    "category": "error",
    "code": "C03",
    "file": "test.tsx",
    "message": "Qrl($) scope is not a function, but it's capturing local identifiers: style",
    "highlights": [
      {
        "lo": 212,
        "hi": 217,
        "startLine": 7,
        "startCol": 14,
        "endLine": 7,
        "endCol": 18
      }
    ],
    "suggestions": null,
    "scope": "optimizer"
  },
  {
    "category": "error",
    "code": "C03",
    "file": "test.tsx",
    "message": "Qrl($) scope is not a function, but it's capturing local identifiers: render",
    "highlights": [
      {
        "lo": 285,
        "hi": 291,
        "startLine": 11,
        "startCol": 12,
        "endLine": 11,
        "endCol": 17
      }
    ],
    "suggestions": null,
    "scope": "optimizer"
  }
]
