crates/qwik-optimizer-oxc/tests/snapshots/example_issue_33443.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal } from "@qwik.dev/core";

export const Issue3742 = component$(({ description = "", other }: any) => {
  const counter = useSignal(0);
  return (
    <div
      title={
        description && "description" in other ? `Hello ${counter.value}` : `Bye ${counter.value}`
      }
    >
      Issue3742
      <button onClick$={() => counter.value++}>Increment</button>
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { _captures } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const _hf0 = (p0, p1) =>
  (p0.description ?? "") && "description" in p0.other ? `Hello ${p1.value}` : `Bye ${p1.value}`;
const _hf0_str =
  '(p0.description??"")&&"description"in p0.other?`Hello ${p1.value}`:`Bye ${p1.value}`';
import { useSignal } from "@qwik.dev/core";
const Issue3742_component_div_button_q_e_click_95Hlm8WgsYY = () => {
  const counter = _captures[0];
  return counter.value++;
};
const Issue3742_component_svSy0PlWTAw = (_rawProps) => {
  const counter = useSignal(0);
  return /* @__PURE__ */ _jsxSorted(
    "div",
    {
      title: _fnSignal(_hf0, [_rawProps, counter], _hf0_str),
    },
    null,
    [
      "Issue3742",
      /* @__PURE__ */ _jsxSorted(
        "button",
        null,
        {
          "q-e:click": /* @__PURE__ */ inlinedQrl(
            Issue3742_component_div_button_q_e_click_95Hlm8WgsYY,
            "Issue3742_component_div_button_q_e_click_95Hlm8WgsYY",
            [counter],
          ),
        },
        "Increment",
        3,
        null,
      ),
    ],
    3,
    "u6_0",
  );
};
export const Issue3742 = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl(Issue3742_component_svSy0PlWTAw, "Issue3742_component_svSy0PlWTAw"),
);

=== DIAGNOSTICS ===

[]
