crates/qwik-optimizer-oxc/tests/snapshots/example_issue_4438.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal } from "@qwik.dev/core";

export const App = component$(() => {
  const toggle = useSignal(false);
  return (
    <>
      <div data-nu={toggle.value ? $localize`singular` : "plural"}></div>
      <div>{toggle.value ? $localize`singular` : $localize`plural`}</div>
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useSignal } from "@qwik.dev/core";
const App_component_ckEPmXZlub0 = () => {
  const toggle = useSignal(false);
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted(
        "div",
        {
          "data-nu": toggle.value ? $localize`singular` : "plural",
        },
        null,
        null,
        3,
        null,
      ),
      /* @__PURE__ */ _jsxSorted(
        "div",
        null,
        null,
        toggle.value ? $localize`singular` : $localize`plural`,
        1,
        null,
      ),
    ],
    1,
    "u6_0",
  );
};
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"),
);

=== DIAGNOSTICS ===

[]
