crates/qwik-optimizer-oxc/tests/snapshots/example_jsx_import_source.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
/* @jsxImportSource react */

import { qwikify$ } from "./qwikfy";

export const App = () => <div onClick$={() => console.log("App")}></div>;

export const App2 = qwikify$(() => <div onClick$={() => console.log("App2")}></div>);

=== test.js ===
/* @jsxImportSource react */ import { qwikifyQrl } from "./qwikfy";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App2_qwikify_XXXXXXXXXXXX.js");
import { jsx as _jsx } from "react/jsx-runtime";
export const App = () =>
  /* @__PURE__ */ _jsx("div", {
    onClick$: () => console.log("App"),
  });
export const App2 = qwikifyQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App2_qwikify_XXXXXXXXXXXX"));

=== test.tsx_App2_qwikify_XXXXXXXXXXXX.js === (ENTRY)
import { jsx as _jsx } from "react/jsx-runtime";
export const App2_qwikify_XXXXXXXXXXXX = () =>
  /* @__PURE__ */ _jsx("div", {
    onClick$: () => console.log("App2"),
  });

/*
{
  "origin": "test.tsx",
  "name": "App2_qwikify_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App2_qwikify",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App2_qwikify_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "qwikify$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
