crates/qwik-optimizer-oxc/tests/snapshots/example_jsx_keyed_dev.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore } from "@qwik.dev/core";

export const App = component$((props: Stuff) => {
  return (
    <>
      <Cmp key="stuff"></Cmp>
      <Cmp></Cmp>
      <Cmp prop="23"></Cmp>
      <Cmp prop="23" key={props.stuff}></Cmp>
      <p key={props.stuff}>Hello Qwik</p>
    </>
  );
});

=== project/index.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrlDEV } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./index.tsx_App_component_XXXXXXXXXXXX.js");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrlDEV(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX", {
    file: "/src/project/project/index.tsx",
    lo: 87,
    hi: 303,
    displayName: "index.tsx_App_component",
  }),
);

=== project/index.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
export const App_component_XXXXXXXXXXXX = (props) => {
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted(Cmp, null, null, null, 3, "stuff", {
        fileName: "project/index.tsx",
        lineNumber: 6,
        columnNumber: 7,
      }),
      /* @__PURE__ */ _jsxSorted(Cmp, null, null, null, 3, "Q6_0", {
        fileName: "project/index.tsx",
        lineNumber: 7,
        columnNumber: 7,
      }),
      /* @__PURE__ */ _jsxSorted(
        Cmp,
        null,
        {
          prop: "23",
        },
        null,
        3,
        "Q6_1",
        {
          fileName: "project/index.tsx",
          lineNumber: 8,
          columnNumber: 7,
        },
      ),
      /* @__PURE__ */ _jsxSorted(
        Cmp,
        null,
        {
          prop: "23",
        },
        null,
        3,
        props.stuff,
        {
          fileName: "project/index.tsx",
          lineNumber: 9,
          columnNumber: 7,
        },
      ),
      /* @__PURE__ */ _jsxSorted("p", null, null, "Hello Qwik", 3, props.stuff, {
        fileName: "project/index.tsx",
        lineNumber: 10,
        columnNumber: 7,
      }),
    ],
    1,
    "Q6_2",
    {
      fileName: "project/index.tsx",
      lineNumber: 5,
      columnNumber: 5,
    },
  );
};

/*
{
  "origin": "project/index.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "index.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "index.tsx_App_component_XXXXXXXXXXXX",
  "path": "project",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== DIAGNOSTICS ===

[]
